# teamflow

./: .env.example  .gitignore  CLAUDE.md  TODO.md  alembic.ini  code-audit-report.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: auto-create-gitee-repo.md  gitea-project-access-flow.md  hermes-comparison-report.md  rebuild-spec.md
docs/prd/: 00-product-overview.md  01-mvp-scope.md  02-data-and-event-model.md  03-acceptance-checklist.md  04-testing-strategy.md  05-prompt-templates.md  06-technical-architecture.md  README.md
docs/prd/modules/: 01-project-entry-and-onboarding.md  02-feishu-workspace.md  03-gitea-access-sync.md  03-project-operations-and-collaboration.md  04-ai-analysis-and-decision.md  05-platform-and-observability.md
docs/prompts/: daily_standup.md  risk_analysis.md  system.md  task_suggestion.md  weekly_report.md
docs/root/: AGENTS.md  CLAUDE.md  DESIGN.md  PM_STYLE.md  README.md  TESTING.md  TODO.md  USAGE.md
docs/strategies/active/: member-overload-rebalance.md  overdue-task-reminder.md  stale-branch-alert.md
migrations/: env.py
scripts/: cleanup_cli_docs.py  e2e_test.py  test_agent.py  test_feishu_contacts.py  verify_agent.py
src/teamflow/: __init__.py  __main__.py  main.py
src/teamflow/access/: __init__.py  callback.py  dispatcher.py  feishu_contact.py  parser.py  watcher.py
src/teamflow/ai/: __init__.py  agent.py  model_registry.py  models.py  prompts.py
src/teamflow/config/: __init__.py  settings.py
src/teamflow/core/: __init__.py  enums.py  logging.py  result.py  types.py
src/teamflow/execution/: __init__.py  cli.py  messages.py
src/teamflow/git/: __init__.py  gitea_service.py
src/teamflow/orchestration/: __init__.py  access_sync.py  batch_register.py  card_templates.py  command_router.py  event_bus.py  project_flow.py  workspace_flow.py
src/teamflow/scheduling/: __init__.py
src/teamflow/setup/: __init__.py  cli.py  feishu.py
src/tests/: conftest.py
(+21 files in other folders)
